# gnome-app-templates

./: GatGnomeAppWindow.html  GatSidebar.html  GatSidebarWindow.html  Makefile.am  README.md  annotation-glossary.html  api-index-full.html  autogen.sh  ch01.html  common.mk  configure.ac  deprecated-api-index.html  gat.devhelp2  index.html  index.sgml  object-tree.html
data/: Makefile.am  gat.gresource.xml  gat.xml  style.css
demo/: Makefile.am  gat-sidebar-demo.c  sidebar.c  simple.c
docs/: Makefile.am  gat-docs.xml
src/: Makefile.am  gat-gnome-app-window.c  gat-gnome-app-window.h  gat-sidebar-window.c  gat-sidebar-window.h  gat-sidebar.c  gat-sidebar.h  gnome-app-window.c  gnome-app-window.h  sidebar-window.c  sidebar-window.h
